# andromeda-desktop-clients

./: .clang-tidy  README.md
src/: andromeda.cmake
src/lib/andromeda/: CMakeLists.txt  SecureBuffer.cpp  SecureBuffer.hpp  StringUtil.cpp  StringUtil.hpp  base64.hpp
src/lib/andromeda-fuse/: FuseOperations.cpp
src/lib/andromeda/_tests/: CMakeLists.txt  StringUtilTest.cpp  base64Test.cpp
src/lib/andromeda/backend/: BackendImpl.cpp  BackendImpl.hpp  Config.cpp  Config.hpp  HTTPRunner.cpp  HTTPRunner.hpp
src/lib/andromeda/filesystem/: FSConfig.cpp  FSConfig.hpp  File.cpp  File.hpp  Item.cpp  Item.hpp
src/lib/andromeda/filesystem/filedata/: CMakeLists.txt  CachingAllocator.cpp  CachingAllocator.hpp  MemoryAllocator.cpp  PageBackend.cpp
src/lib/andromeda/filesystem/folders/: Filesystem.cpp  Filesystems.cpp  PlainFolder.cpp  PlainFolder.hpp
